monitor/containerized-internal/app/service-internal-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-monitor
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: internal-monitor
